--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ O Vid'Alegre - Restaurant
                         <div class="row align-items-center">
                             <div class="col-lg-8 col-12 mt-4">
                                 <p>Copyright&copy; O Vid'Alegre.
-                                    <br>Design: <a href="https://fjreis-portefolio.netlify.app/" target="_blank"
+                                    <br>Design: <a href="https://franciscojosereis.github.io/portefolio/" target="_blank"
                                         style="color: blue;">Francisco
                                         Reis</a>
                             </div>
